# debug-printer

./: .gitignore  readme.md
driver/: CMakeLists.txt
driver/include/: hardpanel_driver.h
firmware/: CMakeLists.txt  partitions.csv  sdkconfig
firmware/main/: CMakeLists.txt  main.c
tools/: BUILD.md  install.bat  setup_vscode.bat
